After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795886 - Some environment variables are not preserved when launching greeter and apps
Some environment variables are not preserved when launching greeter and apps
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2018-05-07 16:13 UTC by Marco Trevisan (Treviño)
Modified: 2018-05-07 16:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
launch-environment: Order optional environment vertically (1.87 KB, patch)
2018-05-07 16:36 UTC, Marco Trevisan (Treviño)
committed Details | Review
launch-environment: Set PATH via optional_environment (1.32 KB, patch)
2018-05-07 16:36 UTC, Marco Trevisan (Treviño)
committed Details | Review
launch-environment: Export library and gio paths (1.48 KB, patch)
2018-05-07 16:36 UTC, Marco Trevisan (Treviño)
none Details | Review
launch-environment: Export library and gio paths (1.31 KB, patch)
2018-05-07 16:41 UTC, Marco Trevisan (Treviño)
committed Details | Review
launch-environment: Export library and gio paths (1.31 KB, patch)
2018-05-07 16:48 UTC, Marco Trevisan (Treviño)
committed Details | Review
launch-environment: Set PATH via optional_environment (1.32 KB, patch)
2018-05-07 16:49 UTC, Marco Trevisan (Treviño)
committed Details | Review
launch-environment: Order optional environment vertically (1.87 KB, patch)
2018-05-07 16:49 UTC, Marco Trevisan (Treviño)
committed Details | Review

Description Marco Trevisan (Treviño) 2018-05-07 16:13:03 UTC
Some env variables aren't passed when launching the GDM gnome-shell instance, and this makes impossible to launch it from different contextes such as jhbuild.
Comment 1 Marco Trevisan (Treviño) 2018-05-07 16:13:23 UTC
Fixed in https://git.gnome.org/browse/gdm/log/?h=wip/3v1n0/more-launch-environments
Comment 2 Marco Trevisan (Treviño) 2018-05-07 16:36:15 UTC
Created attachment 371776 [details] [review]
launch-environment: Order optional environment vertically

As per better readability.
Comment 3 Marco Trevisan (Treviño) 2018-05-07 16:36:22 UTC
Created attachment 371777 [details] [review]
launch-environment: Set PATH via optional_environment

There's no need to add a different code path for this global env.
Comment 4 Marco Trevisan (Treviño) 2018-05-07 16:36:28 UTC
Created attachment 371778 [details] [review]
launch-environment: Export library and gio paths

If launching gdm from special environments (as jhbuild) these should
be forwarded to the children greeter and launched apps too.
Comment 5 Marco Trevisan (Treviño) 2018-05-07 16:41:28 UTC
Created attachment 371779 [details] [review]
launch-environment: Export library and gio paths

If launching gdm from special environments (as jhbuild) these should
be forwarded to the children greeter and launched apps too.
Comment 6 Ray Strode [halfline] 2018-05-07 16:44:13 UTC
Review of attachment 371776 [details] [review]:

Comment 7 Ray Strode [halfline] 2018-05-07 16:44:28 UTC
Review of attachment 371777 [details] [review]:

Comment 8 Ray Strode [halfline] 2018-05-07 16:44:39 UTC
Review of attachment 371779 [details] [review]:

Comment 9 Marco Trevisan (Treviño) 2018-05-07 16:45:20 UTC
The following fixes have been pushed:
Comment 10 Marco Trevisan (Treviño) 2018-05-07 16:48:49 UTC
The following fixes have been pushed:
85184f7 launch-environment: Export library and gio paths
6e74335 launch-environment: Set PATH via optional_environment
f372123 launch-environment: Order optional environment vertically
Comment 11 Marco Trevisan (Treviño) 2018-05-07 16:48:54 UTC
Created attachment 371780 [details] [review]
launch-environment: Export library and gio paths

If launching gdm from special environments (as jhbuild) these should
be forwarded to the children greeter and launched apps too.
Comment 12 Marco Trevisan (Treviño) 2018-05-07 16:49:01 UTC
Created attachment 371781 [details] [review]
launch-environment: Set PATH via optional_environment

There's no need to add a different code path for this global env.
Comment 13 Marco Trevisan (Treviño) 2018-05-07 16:49:08 UTC
Created attachment 371782 [details] [review]
launch-environment: Order optional environment vertically

As per better readability.