launch-environment: Order optional environment vertically

As per better readability.

https://bugzilla.gnome.org/show_bug.cgi?id=795886